--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,10 @@
+:root{
+  box-sizing: border-box;
+  font-size: 16px;
+
+}
+
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
